# Backtester101

./: LICENSE  README.md  alternative_data.ipynb  crossover_example.ipynb  example_data.csv  main.py  mean_reversion_example.ipynb  pairs_trade_examples.ipynb  pyproject.toml
backtester/: backtester.py  data_handler.py  performance.py  strategies.py
